--- a/app/src/main/res/layout/item_yelp_business.xml
+++ b/app/src/main/res/layout/item_yelp_business.xml
@@ -7,16 +7,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginStart="8dp"
     android:layout_marginTop="16dp"
-    android:layout_marginEnd="8dp">
+    android:layout_marginEnd="8dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="?attr/selectableItemBackground">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <!-- Content description added via adapter -->
         <ImageView android:id="@+id/business_img"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:scaleType="centerCrop"/>
+            tools:ignore="ContentDescription" />
 
         <TextView android:id="@+id/business_name_tv"
             android:layout_width="match_parent"
