--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity">
+    tools:context=".feature.business.BusinessesActivity">
 
     <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
         app:theme="@style/ToolbarTheme"
