--- a/app/src/main/res/layout/item_yelp_business.xml
+++ b/app/src/main/res/layout/item_yelp_business.xml
@@ -10,7 +10,7 @@
     android:layout_marginEnd="8dp"
     android:clickable="true"
     android:focusable="true"
-    android:background="?attr/selectableItemBackground">
+    android:foreground="?attr/selectableItemBackground">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
