--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".feature.business.presentation.BusinessesActivity">
 
-    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:theme="@style/ToolbarTheme"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -18,13 +19,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.SearchView android:id="@+id/search_view"
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
     </androidx.appcompat.widget.Toolbar>
 
-    <androidx.recyclerview.widget.RecyclerView android:id="@+id/business_list_view"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/businessListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingStart="8dp"
