--- a/app/src/main/res/layout/item_yelp_business.xml
+++ b/app/src/main/res/layout/item_yelp_business.xml
@@ -17,12 +17,15 @@
         android:layout_height="wrap_content">
 
         <!-- Content description added via adapter -->
-        <ImageView android:id="@+id/business_img"
+        <ImageView
+            android:id="@+id/business_img"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="ContentDescription" />
 
-        <TextView android:id="@+id/business_name_tv"
+        <TextView
+            android:id="@+id/business_name_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
